@@ -1,2 +1,0 @@
-Un fonts are GPL'd Korean fonts.  They were originally available as
-PostScript fonts for HLaTeX, and later converted into TrueType fonts.
