@@ -1,15 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2004/08/04 22:56:02 minskim Exp $
-lib/X11/fonts/TTF/UnBatang.ttf
-lib/X11/fonts/TTF/UnBatangBold.ttf
-lib/X11/fonts/TTF/UnBom.ttf
-lib/X11/fonts/TTF/UnDotum.ttf
-lib/X11/fonts/TTF/UnDotumBold.ttf
-lib/X11/fonts/TTF/UnGraphic.ttf
-lib/X11/fonts/TTF/UnGungseo.ttf
-lib/X11/fonts/TTF/UnPen.ttf
-lib/X11/fonts/TTF/UnPenheulim.ttf
-lib/X11/fonts/TTF/UnPilgi.ttf
-lib/X11/fonts/TTF/UnPilgiBold.ttf
-lib/X11/fonts/TTF/UnShinmun.ttf
-lib/X11/fonts/TTF/UnTaza.ttf
-lib/X11/fonts/TTF/UnYetgul.ttf
